# Qumea-Plugin

./: .gitignore  Dockerfile  README.md  build.ps1  pyproject.toml
scripts/: change.py
src/qumea_plugin/: __init__.py  __main__.py  app.py  config.py  deps.py  logging_conf.py  security.py
src/qumea_plugin/db/: database.py  models.py
src/qumea_plugin/db/crud/: config.py  events.py  rooms.py
src/qumea_plugin/routers/: api_models.py  auth_routes.py  backup_routes.py  config_routes.py  event_routes.py  maintenance_routes.py  public_routes.py  room_routes.py  service_routes.py
src/qumea_plugin/services/: auth_service.py  config_defaults.py  service_config_defaults.py
src/qumea_plugin/services/http/: client.py
src/qumea_plugin/services/mqtt/: client.py
src/qumea_plugin/services/runtime/: context.py  manager.py
src/qumea_plugin/services/ssh/: listener.py
src/qumea_plugin/services/workflow/: engine.py
src/qumea_plugin/services/workflow/stages/: http_get.py
src/qumea_plugin/static/: app.js  index.html  style.css
src/qumea_plugin/static/js/: backups.js  dashboard.js  login.js  logs.js  maintenance.js  popup.js  register.js  rooms.js  settings.js  system.js
src/qumea_plugin/static/libs/css/: bootstrap-icons.css  datatables.min.css  fonts.css
src/qumea_plugin/static/libs/js/: datatables.min.js
src/qumea_plugin/static/sites/: administration.html  backups.html  dashboard.html  login.html  logs.html  maintenance.html  register.html  rooms.html  settings.html  system.html
src/qumea_plugin/ws/: logs_socket.py
