[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qumea-plugin"
version = "0.1.0"
description = "Middleware für Qumea und Ascom TelecareIP"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiomqtt>=2.5.0",
    "asyncio-mqtt>=0.16.2",
    "asyncssh>=2.22.0",
    "bcrypt>=5.0.0",
    "fastapi>=0.128.8",
    "fastapi-cors>=0.0.6",
    "httpx>=0.28.1",
    "pydantic-settings>=2.12.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.22",
    "sqlalchemy>=2.0.46",
    "uvicorn[standard]>=0.40.0",
]

[project.scripts]
qumea-plugin = "qumea_plugin.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/qumea_plugin"]
